testsuite/bsc.bugs/github/gh353/BSV_SDataCon_Match.bsv.bsc-out.expected
checking package dependencies
compiling BSV_SDataCon_Match.bsv
Error: "BSV_SDataCon_Match.bsv", line 16, column 12: (T0142)
  Pattern for constructor `Cons' of type Types::MyList1#(a__) requires 2
  arguments, found 1.
Error: "BSV_SDataCon_Match.bsv", line 25, column 12: (T0142)
  Pattern for constructor `Cons' of type Types::MyList1#(a__) requires 2
  arguments, found 1.
